--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,4 +62,6 @@
         <color name="windowBackground">#FFFFFF</color>
         <color name="navigationBarColor">#000000</color>
 
+    <color name = "textColorInstructions">#bcbcc1</color>
+
 </resources>
