--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -9,19 +9,33 @@
 
 
     <WebView
-        android:layout_below="@+id/progressBar"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/webview">
     </WebView>
 
     <ProgressBar
+        android:layout_centerInParent="true"
         android:id="@+id/progressBar"
         android:visibility="visible"
-        android:indeterminateOnly="true"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          />
+
+    <View
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="@drawable/top_gradient"/>
+
+    <View
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:rotation="180"
+        android:background="@drawable/top_gradient"/>
+
 
 </RelativeLayout>
