--- a/app/src/main/res/layout/fragment_roulette_extra.xml
+++ b/app/src/main/res/layout/fragment_roulette_extra.xml
@@ -1,20 +1,307 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".roulette.RouletteExtraFragment">
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_events"
+        android:layout_marginTop="@dimen/header_top_margin"
+        android:layout_marginBottom="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:alpha=".9"
+        app:cardElevation="6dp"
+        android:layout_marginEnd="64dp"
+        app:cardBackgroundColor="@color/background2"
+        app:cardCornerRadius="20.5dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+        <android.support.v7.widget.CardView
+            android:layout_margin="1dp"
+            app:cardCornerRadius="20dp"
+            android:layout_width="match_parent"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="@color/back_shade4"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="Instructions"
+                android:textColor="@color/background2"
+                android:textSize="30sp" />
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+    </android.support.v7.widget.CardView>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:visibility="gone" />
+        android:layout_marginTop="30dp">
+
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="70dp"
+            android:paddingBottom="140dp"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:scrollbars="none">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/para_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textColorInstructions"
+                    android:gravity="left"
+                    android:padding="16dp"
+                    android:text="@string/para_1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/para_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textColorInstructions"
+                    android:gravity="left"
+                    android:layout_below="@+id/para_1"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/para_2"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/para_2"
+                    android:textStyle="bold"
+                    android:textColor="@color/textColorInstructions"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1_p1_p"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/textColorInstructions"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:layout_marginLeft="16dp"
+                    android:text="1."
+                    android:layout_below="@+id/h1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1_p1"
+                    android:layout_width="match_parent"
+                    android:textColor="@color/textColorInstructions"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h1_P1"
+                    android:layout_alignTop="@+id/h1_p1_p"
+                    android:layout_toRightOf="@+id/h1_p1_p"
+                    android:layout_toEndOf="@+id/h1_p1_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1_p1_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:textColor="@color/textColorInstructions"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h1_P1_d"
+                    android:layout_below="@+id/h1_p1_p"
+                    android:layout_toRightOf="@+id/h1_p1_p"
+                    android:layout_toEndOf="@+id/h1_p1_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1_p2_p"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/textColorInstructions"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:layout_marginLeft="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="2."
+                    android:layout_below="@+id/h1_p1_d"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1_p2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h1_P2"
+                    android:layout_alignTop="@+id/h1_p2_p"
+                    android:textColor="@color/textColorInstructions"
+                    android:layout_toRightOf="@+id/h1_p2_p"
+                    android:layout_toEndOf="@+id/h1_p2_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h1_p2_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:textColor="@color/textColorInstructions"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h1_P2_d"
+                    android:layout_below="@+id/h1_p2_p"
+                    android:layout_toRightOf="@+id/h1_p2_p"
+                    android:layout_toEndOf="@+id/h1_p2_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+
+
+
+
+                <TextView
+                    android:id="@+id/h2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/h1_p2_d"
+                    android:gravity="left"
+                    android:textColor="@color/textColorInstructions"
+                    android:textStyle="bold"
+                    android:padding="16dp"
+                    android:text="@string/h2"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h2_p1_p"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/textColorInstructions"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:layout_marginLeft="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="1."
+                    android:layout_below="@+id/h2"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h2_p1"
+                    android:textColor="@color/textColorInstructions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h2_P1"
+                    android:layout_alignTop="@+id/h2_p1_p"
+                    android:layout_toRightOf="@+id/h2_p1_p"
+                    android:layout_toEndOf="@+id/h2_p1_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h2_p1_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:textColor="@color/textColorInstructions"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h2_P1_d"
+                    android:layout_below="@+id/h2_p1_p"
+                    android:layout_toRightOf="@+id/h2_p1_p"
+                    android:layout_toEndOf="@+id/h2_p1_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h2_p2_p"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:layout_marginLeft="16dp"
+                    android:paddingBottom="16dp"
+                    android:textColor="@color/textColorInstructions"
+                    android:text="2."
+                    android:layout_below="@+id/h2_p1_d"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h2_p2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:textColor="@color/textColorInstructions"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h2_P2"
+                    android:layout_alignTop="@+id/h2_p2_p"
+                    android:layout_toRightOf="@+id/h2_p2_p"
+                    android:layout_toEndOf="@+id/h2_p2_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/h2_p2_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="16dp"
+                    android:textColor="@color/textColorInstructions"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:text="@string/h2_P2_d"
+                    android:layout_below="@+id/h2_p2_p"
+                    android:layout_toRightOf="@+id/h2_p2_p"
+                    android:layout_toEndOf="@+id/h2_p2_p"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp" />
+
+            </RelativeLayout>
+
+        </ScrollView>
+    </RelativeLayout>
 
 </FrameLayout>
