--- a/app/src/main/res/layout/fragment_selected_sport.xml
+++ b/app/src/main/res/layout/fragment_selected_sport.xml
@@ -65,6 +65,7 @@
     </android.support.v7.widget.CardView>
 
     <RelativeLayout
+        android:id="@+id/rl_bottom_vp"
         android:layout_marginBottom="64dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_width="200dp"
@@ -72,6 +73,7 @@
 
 
         <android.support.v7.widget.CardView
+
             app:cardElevation="6dp"
             android:layout_marginTop="8.25dp"
             app:cardCornerRadius="25.5dp"
@@ -90,8 +92,6 @@
             app:ntb_preview_colors="@array/red_wine"
             app:ntb_corners_radius="25dp"
             app:ntb_scaled="false"
-            app:ntb_active_color="@color/back_shade4"
-            app:ntb_inactive_color="#dddfec"
             app:ntb_bg_color="@color/back_shade4"
             app:ntb_badge_bg_color="@color/gold"
             app:ntb_badged="true"/>
