--- a/app/src/main/res/layout/row_developer.xml
+++ b/app/src/main/res/layout/row_developer.xml
@@ -20,9 +20,10 @@
             android:layout_marginEnd="7dp"
             android:layout_marginTop="4dp"
             android:clickable="true"
-            android:paddingHorizontal="5dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             app:cardBackgroundColor="@android:color/transparent"
-            app:cardElevation="3dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="40dp">
             <!--app:cardBackgroundColor="#424242"-->
             <!--android:foreground="?android:attr/selectableItemBackground"-->
@@ -41,7 +42,8 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    app:cardCornerRadius="40dp">
+                    app:cardCornerRadius="40dp"
+                    app:cardElevation="0dp">
 
                     <ImageView
                         android:id="@+id/blapic"
