--- a/app/src/main/res/layout/row_roulette_leaderboard.xml
+++ b/app/src/main/res/layout/row_roulette_leaderboard.xml
@@ -25,7 +25,7 @@
             android:textStyle="bold"
             android:textColor="@color/black"
             android:gravity="center"
-            android:text="1000" />
+            android:text="-" />
 
     </android.support.v7.widget.CardView>
 
@@ -43,7 +43,7 @@
         android:paddingEnd="12dp"
         android:textColor="@color/background2"
         android:paddingStart="12dp"
-        android:text="68"/>
+        android:text="00"/>
 
     <TextView
         android:layout_marginStart="12dp"
