--- a/app/src/main/res/layout/row_sponsors.xml
+++ b/app/src/main/res/layout/row_sponsors.xml
@@ -15,7 +15,8 @@
             app:cardBackgroundColor="@android:color/transparent"
         android:padding="3dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginStart="12dp">
+        android:layout_marginStart="12dp"
+        app:cardElevation="0dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,20 +29,47 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Medium Text"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
                     android:id="@+id/textView2"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/back_shade6"
                     android:layout_gravity="center_horizontal"
                     android:padding="10dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@drawable/line_gradient"/>
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Title Sponsor"
+                    android:textSize="16sp"
+                    android:textColor="@color/back_shade6"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="8dp"
+                    />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardBackgroundColor="#eeeeee"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="20dp"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="0dp">
 
                 <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:padding="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="4dp"
                     android:scaleType="centerInside"
                     android:id="@+id/imageView2"
-                    android:layout_gravity="center_horizontal"
                     android:src="@drawable/bosm_logo"
                      />
+
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
 
