--- a/app/src/main/res/layout/row_trending.xml
+++ b/app/src/main/res/layout/row_trending.xml
@@ -83,18 +83,20 @@
             android:background="@drawable/line_gradient" />
 
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/ll_college"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/view_12"
-            android:visibility="visible">
+            android:visibility="visible"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp">
 
             <TextView
                 android:id="@+id/tv_college_one"
-                android:layout_width="0dp"
+                android:layout_toStartOf="@id/tv_vs"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:paddingLeft="36dp"
                 android:paddingRight="36dp"
@@ -105,6 +107,10 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
             <TextView
+                android:id="@+id/tv_vs"
+                android:layout_centerHorizontal="true"
+                android:layout_alignTop="@id/tv_college_one"
+                android:layout_alignBottom="@id/tv_college_one"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="11sp"
@@ -113,11 +119,10 @@
 
             <TextView
                 android:id="@+id/tv_college_two"
-                android:layout_width="0dp"
+                android:layout_toEndOf="@id/tv_vs"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
-                android:padding="15dp"
                 android:paddingLeft="36dp"
                 android:paddingRight="36dp"
                 android:paddingTop="8dp"
@@ -127,7 +132,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/ll_time"
@@ -219,6 +224,19 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:maxLength="15"/>
+
+                <ImageView
+
+                    android:layout_alignBottom="@+id/tv_date"
+                    android:id="@+id/iv_map"
+                    android:src="@drawable/map_stad"
+                    android:tint="@color/back_shade2"
+                    android:layout_width="48dp"
+                    android:layout_height="32dp"
+                    android:paddingBottom="5dp"
+                    android:paddingStart="15dp"
+                    android:paddingTop="8dp"
+                    android:layout_alignParentEnd="true"/>
 
             </RelativeLayout>
 
