--- a/app/src/main/res/drawable/circular_imageview.xml
+++ b/app/src/main/res/drawable/circular_imageview.xml
@@ -2,8 +2,34 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <size android:width="100dp" android:height="100dp" />
-    <solid android:color="#aa78bf33"/>
+    <solid android:color="@color/back_shade4"/>
     <corners android:radius="50dp"/>
 
 
 </shape>
+    <!--130f2b-->
+<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >-->
+
+<!--<item>-->
+    <!--<shape android:shape="rectangle" >-->
+        <!--<size android:height="8dp" android:width="8dp" />-->
+        <!--<corners android:radius="4dp"/>-->
+        <!--<solid android:color="#66130f2b" />-->
+    <!--</shape>-->
+
+<!--</item>-->
+<!--<item android:top="0.04dp">-->
+    <!--<shape-->
+        <!--android:dither="true"-->
+        <!--android:shape="rectangle" >-->
+        <!--<size android:height="8dp" android:width="8dp" />-->
+        <!--<corners android:radius="4dp"/>-->
+        <!--<gradient-->
+            <!--android:angle="270"-->
+            <!--android:endColor="#00000000"-->
+            <!--android:startColor="#10000000" />-->
+
+    <!--</shape>-->
+<!--</item>-->
+
+<!--</layer-list>-->
