--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -197,7 +197,7 @@
       android:layout_height="match_parent">
 
       <android.support.v7.widget.CardView
-          android:id="@+id/cv_roulette"
+          android:id="@+id/cv_quilympics"
           app:cardElevation="0dp"
           android:layout_marginStart="12dp"
           android:layout_marginEnd="12dp"
@@ -207,19 +207,40 @@
           android:layout_width="match_parent"
           android:layout_height="0dp">
 
-
-          <TextView
+          <RelativeLayout
               android:background="@drawable/border_shadow"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:text="Roulette"
-              android:gravity="center"
-              android:textSize="35dp"
-              />
+              android:layout_height="match_parent">
+
+              <ImageView
+                  android:alpha="0.5"
+                  android:id="@+id/image2"
+                  android:layout_centerInParent="true"
+                  android:layout_centerVertical="true"
+                  android:layout_marginEnd="0dp"
+                  android:layout_width="250dp"
+                  android:layout_height="250dp"
+                  android:src="@drawable/idea"/>
+              <TextView
+                  android:layout_width="match_parent"
+                  android:gravity="center"
+                  android:layout_height="wrap_content"
+                  android:text="Quilympics"
+                  android:maxLines="1"
+                  android:textStyle="bold"
+                  android:textColor="#ff3c00"
+                  android:layout_centerInParent="true"
+                  android:textSize="55dp"
+                  />
+          </RelativeLayout>
+
+
+
+
       </android.support.v7.widget.CardView>
 
       <android.support.v7.widget.CardView
-          android:id="@+id/cv_quilympics"
+          android:id="@+id/cv_roulette"
           android:layout_marginTop="6dp"
           android:layout_marginStart="12dp"
           app:cardElevation="0dp"
@@ -228,14 +249,32 @@
           android:layout_weight="1"
           android:layout_width="match_parent"
           android:layout_height="0dp">
-          <TextView
+
+          <RelativeLayout
               android:background="@drawable/border_shadow"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:text="Quilympics"
-              android:textSize="35dp"
-              android:gravity="center"
-              />
+              android:layout_height="match_parent">
+
+              <ImageView
+                  android:alpha="0.5"
+                  android:id="@+id/image"
+                  android:layout_centerInParent="true"
+                  android:layout_marginLeft="0dp"
+                  android:layout_width="250dp"
+                  android:layout_height="250dp"
+                  android:src="@drawable/roulette"/>
+              <TextView
+                  android:layout_width="match_parent"
+                  android:gravity="center"
+                  android:layout_height="wrap_content"
+                  android:text="Roulette"
+                  android:maxLines="1"
+                  android:textColor="#00ffaa"
+                  android:textStyle="bold"
+                  android:layout_centerInParent="true"
+                  android:textSize="55dp"
+                  />
+          </RelativeLayout>
 
 
       </android.support.v7.widget.CardView>
