--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
         android:overScrollMode="never"/>
 
     <RelativeLayout
+        android:id="@+id/rl_layout_bottom"
         android:layout_marginBottom="64dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_width="200dp"
