--- a/app/src/main/res/layout/layout_hover_icon.xml
+++ b/app/src/main/res/layout/layout_hover_icon.xml
@@ -3,10 +3,27 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <TextView
+        android:elevation="4dp"
+        android:visibility="gone"
+        android:id="@+id/tv_number"
+        android:background="@drawable/notif_"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:gravity="center"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:text="2" />
+
+
     <android.support.v7.widget.CardView
+        android:layout_margin="2dp"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:cardCornerRadius="30dp"
+        android:background="@android:color/transparent"
         app:cardBackgroundColor="@color/back_shade4"
         >
 
@@ -22,38 +39,6 @@
             android:layout_width="46dp"
             android:layout_height="46dp"
             />
-
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_number"
-            android:background="@drawable/notif_"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:gravity="center"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:text="2" />
-
-        <!--<TextView-->
-            <!--android:layout_marginTop="45dp"-->
-            <!--android:id="@+id/tv_total_price"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="@dimen/fab_margin"-->
-            <!--android:layout_marginRight="@dimen/fab_margin"-->
-            <!--android:background="@drawable/round_template_balance"-->
-            <!--android:elevation="9dp"-->
-            <!--android:paddingBottom="1dp"-->
-            <!--android:paddingLeft="12dp"-->
-            <!--android:paddingRight="12dp"-->
-            <!--android:paddingTop="1dp"-->
-            <!--android:text="Not"-->
-            <!--android:textColor="@color/shade3"-->
-            <!--android:textSize="13sp"-->
-            <!--android:visibility="visible" />-->
-
 
 
     </RelativeLayout>
