--- a/app/src/main/res/layout/fragment_developers.xml
+++ b/app/src/main/res/layout/fragment_developers.xml
@@ -48,7 +48,7 @@
                     android:gravity="center"
                     android:paddingBottom="4dp"
                     android:paddingTop="4dp"
-                    android:text="Developers"
+                    android:text="DEVELOPERS"
                     android:textColor="@color/background2"
                     android:textSize="30sp" />
 
