--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -40,7 +40,7 @@
           android:gravity="center"
           android:paddingBottom="4dp"
           android:paddingTop="4dp"
-          android:text="Contacts"
+          android:text="CONTACTS"
           android:textColor="@color/background2"
           android:textSize="30sp" />
 
