--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -40,7 +40,7 @@
             android:gravity="center"
             android:paddingBottom="4dp"
             android:paddingTop="4dp"
-            android:text="Sponsors"
+            android:text="SPONSORS"
             android:textColor="@color/background2"
             android:textSize="30sp" />
 
