--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -44,11 +44,11 @@
 
         <ImageView
             android:id="@+id/icon_home"
-            android:tint="@color/back_shade6"
+            android:tint="@color/back_shade2"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginStart="12dp"
-            android:src="@drawable/nav_home2"
+            android:src="@drawable/home"
             android:layout_alignTop="@id/tv_home"
             android:layout_alignBottom="@id/tv_home"
             />
@@ -84,7 +84,7 @@
 
             <ImageView
                 android:id="@+id/icon_game"
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_marginStart="12dp"
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
-                android:text="Games Section"
+                android:text="Gaming Zone"
                 android:textColor="#ffffff"
                 android:layout_toEndOf="@id/icon_game"/>
         </RelativeLayout>
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:id="@+id/icon_photos"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
@@ -168,11 +168,11 @@
 
             <ImageView
                 android:id="@+id/icon_map"
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_marginStart="12dp"
-                android:src="@drawable/nav_maps"
+                android:src="@drawable/nav_map"
                 android:layout_alignTop="@id/tv_map"
                 android:layout_alignBottom="@id/tv_map"
                 />
@@ -209,7 +209,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:id="@+id/icon_epc"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
@@ -251,7 +251,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:id="@+id/icon_hpc"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
@@ -293,7 +293,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:id="@+id/icon_sponsors"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
@@ -334,7 +334,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:id="@+id/icon_developers"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
@@ -376,12 +376,12 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:tint="@color/back_shade6"
+                android:tint="@color/back_shade2"
                 android:id="@+id/icon_contacts"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_marginStart="12dp"
-                android:src="@drawable/nav_contacts"
+                android:src="@drawable/nav_contact"
                 android:layout_alignTop="@id/tv_contacts"
                 android:layout_alignBottom="@id/tv_contacts"
                 />
