--- a/app/src/main/res/layout/row_live.xml
+++ b/app/src/main/res/layout/row_live.xml
@@ -181,8 +181,8 @@
                 android:layout_height="36dp"
                 android:layout_gravity="start"
                 app:dots_secondary_color="@color/orange_shade"
-                app:like_drawable="@drawable/like"
-                app:unlike_drawable="@drawable/dislike"/>
+                app:like_drawable="@drawable/like2"
+                app:unlike_drawable="@drawable/dislike2"/>
 
             <LinearLayout
                 android:layout_centerVertical="true"
@@ -199,7 +199,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/live_rounded"
-                    android:backgroundTint="#FF0080"
+                    android:backgroundTint="@color/back_shade2"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="8dp"
                     android:visibility="invisible"
@@ -227,7 +227,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/live_rounded"
-                    android:backgroundTint="#FFD4E9"
+                    android:backgroundTint="@color/back_shade2"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="8dp"
                     android:visibility="invisible">
@@ -253,8 +253,8 @@
                 android:layout_height="36dp"
                 android:layout_alignParentEnd="true"
                 app:dots_secondary_color="@color/back_shade2"
-                app:like_drawable="@drawable/icon_like"
-                app:unlike_drawable="@drawable/icon_like"/>
+                app:like_drawable="@drawable/like2"
+                app:unlike_drawable="@drawable/dislike2"/>
 
             <!--<ImageView-->
                 <!--android:id="@+id/iv_vote2"-->
