--- a/app/src/main/res/layout/fragment_roulette_extra.xml
+++ b/app/src/main/res/layout/fragment_roulette_extra.xml
@@ -32,7 +32,7 @@
                 android:gravity="center"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
-                android:text="Instructions"
+                android:text="INSTRUCTIONS"
                 android:textColor="@color/background2"
                 android:textSize="30sp" />
 
