--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -47,11 +47,19 @@
     </android.support.v7.widget.CardView>
     </android.support.v7.widget.CardView>
 
-
-    <ListView
+    <RelativeLayout
+        android:id="@+id/rl_filled"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/list_spons"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:paddingTop="60dp">
+
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view"
         android:dividerHeight="2dp"
         android:divider="@android:color/transparent"
         android:clipToPadding="false"
@@ -63,7 +71,8 @@
         android:paddingEnd="3dp"
         >
 
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -77,5 +86,57 @@
         android:layout_height="72dp"
         android:rotation="180"
         android:background="@drawable/top_gradient"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:id="@+id/rl_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/iv_wifi"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/icon_wifi"
+            android:tint="@color/empty_layout_color"
+            android:padding="5dp"/>
+
+        <TextView
+            android:id="@+id/tv_alert"
+            android:layout_below="@id/iv_wifi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Internet Connection"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/empty_layout_color"
+            android:layout_centerHorizontal="true"
+            android:padding="5dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_below="@id/tv_alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Please check your internet connection"
+            android:gravity="center"
+            android:textColor="@color/empty_layout_color"
+            android:textSize="16sp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"/>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
