--- a/app/src/main/res/layout/row_photo.xml
+++ b/app/src/main/res/layout/row_photo.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:background="@drawable/border_shadow">
 
         <com.github.chrisbanes.photoview.PhotoView
@@ -19,18 +18,21 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-            android:scaleType="centerInside"
-        android:src="@color/light_gray"
+            android:scaleType="fitCenter"
         />
 
         <TextView
+            android:gravity="center"
             android:id="@+id/tv_error"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Error Loading Image"
-            android:drawableStart="@drawable/icon_info"/>
+            android:textColor="@color/back_shade2"
+            android:drawableStart="@drawable/icon_error_photo"
+            android:drawableTint="@color/back_shade2"
+            android:drawablePadding="4dp"/>
         <ProgressBar
 
             android:id="@+id/progressBar"
