--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -42,7 +42,7 @@
                 android:gravity="center"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
-                android:text="BOSM PHOTOS"
+                android:text="PHOTOS"
                 android:textColor="@color/background2"
                 android:textSize="30sp" />
 
