--- a/app/src/main/res/layout/fragment_quilympics_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_quilympics_leaderboard.xml
@@ -45,7 +45,7 @@
                 android:gravity="center"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
-                android:text="Leaderboard"
+                android:text="LEADERBOARD"
                 android:textColor="@color/background2"
                 android:textSize="30sp" />
 
