--- a/app/src/main/res/layout/fragment_roulette_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_roulette_leaderboard.xml
@@ -38,7 +38,7 @@
                 android:gravity="center"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
-                android:text="My Rank"
+                android:text="MY RANK"
                 android:textColor="@color/background2"
                 android:textSize="22sp" />
 
