--- a/app/src/main/res/layout/layout_hover_icon.xml
+++ b/app/src/main/res/layout/layout_hover_icon.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:elevation="4dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:id="@+id/tv_number"
         android:background="@drawable/notif_"
         android:layout_width="16dp"
@@ -21,27 +21,27 @@
     <android.support.v7.widget.CardView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        app:cardCornerRadius="24dp"
+        app:cardCornerRadius="27dp"
         android:layout_margin="2dp"
         android:background="@android:color/transparent"
         app:cardBackgroundColor="@color/back_shade4"
         >
 
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="60dp"-->
-        <!--android:layout_height="60dp">-->
-        <!--<ImageView-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:id="@+id/baxter"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:src="@drawable/baxter"-->
-            <!--android:layout_width="46dp"-->
-            <!--android:layout_height="46dp"-->
-            <!--/>-->
+    <RelativeLayout
+        android:layout_margin="4dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/baxter"
+            android:src="@drawable/baxter"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            />
 
 
-    <!--</RelativeLayout>-->
+    </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
