--- a/app/src/main/res/layout/row_sponsors.xml
+++ b/app/src/main/res/layout/row_sponsors.xml
@@ -31,7 +31,7 @@
                     android:text="Medium Text"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    android:id="@+id/textView2"
+                    android:id="@+id/tv_name"
                     android:textColor="@color/back_shade6"
                     android:layout_gravity="center_horizontal"
                     android:padding="10dp" />
@@ -41,7 +41,7 @@
                     android:background="@drawable/line_gradient"/>
 
                 <TextView
-                    android:id="@+id/tv_description"
+                    android:id="@+id/tv_descripition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Title Sponsor"
@@ -61,12 +61,12 @@
                     app:cardElevation="0dp">
 
                 <ImageView
+                    android:minHeight="150dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="4dp"
                     android:scaleType="centerInside"
-                    android:id="@+id/imageView2"
-                    android:src="@drawable/bosm_logo"
+                    android:id="@+id/iv_sponsor"
                      />
 
                 </android.support.v7.widget.CardView>
